// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkAdapter> renders 1`] = `
"<div class=\\"hig__global-nav\\">
    <div class=\\"hig__global-nav__sidenav\\">
  <div class=\\"hig__global-nav__sidenav__scroll\\">
    <h3 class=\\"hig__global-nav__sidenav__super-header\\">
      <a class=\\"hig__global-nav__sidenav__super-header-link\\"></a>
    </h3>
    <h4 class=\\"hig__global-nav__sidenav__header\\">
      <a class=\\"hig__global-nav__sidenav__header-link\\"></a>
    </h4>
    <div class=\\"hig__global-nav__sidenav__groups\\">
      <!--GROUP-->
    </div>
    <!--SLOT-->
    <div class=\\"hig__global-nav__sidenav__links\\">
      <a class=\\"hig__global-nav__sidenav__links__link\\" href=\\"#\\">link</a><!--LINK-->
    </div>
    <div class=\\"hig__global-nav__sidenav__copyright\\">© 2017 Autodesk, Inc.</div>
  </div>
  <!--SEARCH-->
</div><!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;

exports[`<LinkAdapter> renders with initial props 1`] = `
"<div class=\\"hig__global-nav\\">
    <div class=\\"hig__global-nav__sidenav\\">
  <div class=\\"hig__global-nav__sidenav__scroll\\">
    <h3 class=\\"hig__global-nav__sidenav__super-header\\">
      <a class=\\"hig__global-nav__sidenav__super-header-link\\"></a>
    </h3>
    <h4 class=\\"hig__global-nav__sidenav__header\\">
      <a class=\\"hig__global-nav__sidenav__header-link\\"></a>
    </h4>
    <div class=\\"hig__global-nav__sidenav__groups\\">
      <!--GROUP-->
    </div>
    <!--SLOT-->
    <div class=\\"hig__global-nav__sidenav__links\\">
      <a class=\\"hig__global-nav__sidenav__links__link\\" href=\\"https://a-website.com\\">A title</a><!--LINK-->
    </div>
    <div class=\\"hig__global-nav__sidenav__copyright\\">© 2017 Autodesk, Inc.</div>
  </div>
  <!--SEARCH-->
</div><!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;

exports[`<LinkAdapter> renders with updated props 1`] = `
"<div class=\\"hig__global-nav\\">
    <div class=\\"hig__global-nav__sidenav\\">
  <div class=\\"hig__global-nav__sidenav__scroll\\">
    <h3 class=\\"hig__global-nav__sidenav__super-header\\">
      <a class=\\"hig__global-nav__sidenav__super-header-link\\"></a>
    </h3>
    <h4 class=\\"hig__global-nav__sidenav__header\\">
      <a class=\\"hig__global-nav__sidenav__header-link\\"></a>
    </h4>
    <div class=\\"hig__global-nav__sidenav__groups\\">
      <!--GROUP-->
    </div>
    <!--SLOT-->
    <div class=\\"hig__global-nav__sidenav__links\\">
      <a class=\\"hig__global-nav__sidenav__links__link\\" href=\\"https://a-website.com\\">A title</a><!--LINK-->
    </div>
    <div class=\\"hig__global-nav__sidenav__copyright\\">© 2017 Autodesk, Inc.</div>
  </div>
  <!--SEARCH-->
</div><!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;
